clusters/sirius/apps/stremio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stremio
  template:
    metadata:
      labels:
        app: stremio
    spec:
      containers:
        - name: stremio
          image: stremio/server:v4.20.17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 11470
              name: http
            - containerPort: 12470
              name: https
          volumeMounts:
            - name: stremio-data
              mountPath: /root/.stremio-server
      volumes:
        - name: stremio-data
          nfs:
            server: 192.168.1.10
            path: /mnt/primary/root/config/stremio
