clusters/sirius/apps/stremio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-ingress
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
    - hosts:
        - stremio.sirius.moonblade.work
      secretName: stremio-cert
  rules:
    - host: stremio.sirius.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stremio
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-outer
spec:
  rules:
    - host: stremio.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stremio
                port:
                  name: http
